@@ -37,6 +37,7 @@ EXEC_PREFIX='#!/bin/sh
 
      exec "$JAVACMD" \
        -Xmx512m \
+       --sun-misc-unsafe-memory-access=allow \
        --add-opens java.base/java.lang=ALL-UNNAMED \
        --add-opens java.base/java.util=ALL-UNNAMED \
        --add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
